--- a/Frontends/CarBook_WebUI/Views/Shared/Components/_AboutUsComponentPartial/Default.cshtml
+++ b/Frontends/CarBook_WebUI/Views/Shared/Components/_AboutUsComponentPartial/Default.cshtml
@@ -16,7 +16,7 @@
 
 						<p>@item.description</p>
 				
-						<p><a href="#" class="btn btn-primary py-3 px-4">Hemen Araç Kirala</a></p>
+						<p><a href="/RentACar/Index/" class="btn btn-primary py-3 px-4">Hemen Araç Kirala</a></p>
 					</div>
 				</div>
 			</div>
