--- a/Frontends/CarBook_WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook_WebUI/Views/_ViewImports.cshtml
@@ -5,6 +5,9 @@
 @using CarBook_Dto.ServiceDtos
 @using CarBook_Dto.CarDtos
 @using CarBook_Dto.FooterAddressDtos
+@using CarBook_Dto.ContactDtos
+@using CarBook_Dto.BannerDtos
+@using CarBook_Dto.BlogDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
