--- a/Frontends/CarBook_WebUI/Views/Contact/Index.cshtml
+++ b/Frontends/CarBook_WebUI/Views/Contact/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model CreateContactDto
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/UILayout/Index.cshtml";
@@ -11,21 +11,21 @@
             @await Component.InvokeAsync("_FooterAddressComponentPartial")
             <div class="col-md-8 block-9 mb-md-5">
                 
-                <form action="#" class="bg-light p-5 contact-form">
+                <form  class="bg-light p-5 contact-form" method="post">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Your Name">
+                        <input type="text" class="form-control" placeholder="Adınız Soyadınız" asp-for="Name">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Your Email">
+                        <input type="text" class="form-control" placeholder="Eamil Adresiniz" asp-for="Email">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Subject">
+                        <input type="text" class="form-control" placeholder="Konu" asp-for="Subject">
                     </div>
                     <div class="form-group">
-                        <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+                        <textarea asp-for="Message" cols="30" rows="7" class="form-control" placeholder="Mesajınız"></textarea>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                        <input type="submit" value="Mesaj Gönder" class="btn btn-primary py-3 px-5">
                     </div>
                 </form>
 
