--- a/Frontends/CarBook_WebUI/Views/Car/Index.cshtml
+++ b/Frontends/CarBook_WebUI/Views/Car/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ResultCarWithBrandsDto>
+﻿@model List<ResultCarPricingWithCarDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/UILayout/Index.cshtml";
@@ -11,13 +11,13 @@
             {
                 <div class="col-md-4">
                     <div class="car-wrap rounded ftco-animate">
-                        <div class="img rounded d-flex align-items-end" style="background-image: url(@item.CoverImgUrl);">
+                        <div class="img rounded d-flex align-items-end" style="background-image: url(@item.CoverImageUrl);">
                         </div>
                         <div class="text">
                             <h2 class="mb-0"><a href="car-single.html">@item.Model</a></h2>
                             <div class="d-flex mb-3">
-                                <span class="cat">@item.BrandName</span>
-                                <p class="price ml-auto">TL1200 <span>/day</span></p>
+                                <span class="cat">@item.Brand</span>
+                                <p class="price ml-auto">@item.Amount <span>/Günlük</span></p>
                             </div>
                             <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Hemen Kirala</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Detaylar</a></p>
                         </div>
