--- a/Frontends/CarBook_WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook_WebUI/Views/_ViewImports.cshtml
@@ -8,6 +8,7 @@
 @using CarBook_Dto.ContactDtos
 @using CarBook_Dto.BannerDtos
 @using CarBook_Dto.BlogDtos
+@using CarBook_Dto.CarPricingDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
