--- a/Frontends/CarBook_WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook_WebUI/Views/_ViewImports.cshtml
@@ -9,6 +9,7 @@
 @using CarBook_Dto.BannerDtos
 @using CarBook_Dto.BlogDtos
 @using CarBook_Dto.CarPricingDtos
+@using CarBook_Dto.CategoryDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
