--- a/Frontends/CarBook_WebUI/Views/Blog/BlogDetails.cshtml
+++ b/Frontends/CarBook_WebUI/Views/Blog/BlogDetails.cshtml
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="row">
 
-            @await Component.InvokeAsync("_BlogDetailsMainComponentPartial")
+            @await Component.InvokeAsync("_BlogDetailsMainComponentPartial", new {id=ViewBag.blogid})
              
             <div class="col-md-4 sidebar ftco-animate">
                 
@@ -18,7 +18,7 @@
                 
                 @await Component.InvokeAsync("_BlogDetailsRecentBlogsComponentPartial")
                 
-                @await Component.InvokeAsync("_BlogDeatilsTagCloudComponentPartial")
+                @await Component.InvokeAsync("_BlogDeatilsTagCloudComponentPartial", new { id = ViewBag.blogid })
                 
                 @await Component.InvokeAsync("_BlogDetailsParagraphComponentPartial")
                
