Blog Page edits

--- a/Frontends/CarBook_WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook_WebUI/Views/_ViewImports.cshtml
@@ -10,6 +10,7 @@
 @using CarBook_Dto.BlogDtos
 @using CarBook_Dto.CarPricingDtos
 @using CarBook_Dto.CategoryDtos
+@using CarBook_Dto.AuthorDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
