--- a/Frontends/CarBook_WebUI/Views/Shared/Components/_BlogDetailsMainComponentPartial/Default.cshtml
+++ b/Frontends/CarBook_WebUI/Views/Shared/Components/_BlogDetailsMainComponentPartial/Default.cshtml
@@ -4,16 +4,16 @@
     <h2 class="mb-3">@Model.Title</h2>
          <p>@Model.Description</p>
    
-        @await Component.InvokeAsync("_BlogDetailCloudTagByBlogComponentPartial");
+        @await Component.InvokeAsync("_BlogDetailCloudTagByBlogComponentPartial" , new {id=ViewBag.blogid})
 
-        @await Component.InvokeAsync("_BlogDetailsAuthorAboutComponentPartial");
+    @await Component.InvokeAsync("_BlogDetailsAuthorAboutComponentPartial", new { id = ViewBag.blogid })
 
     <div class="pt-5 mt-5">
         <h3 class="mb-5">6 Yorum</h3>
 
-        @await Component.InvokeAsync("_CommentListByBlogComponentPartial");
+        @await Component.InvokeAsync("_CommentListByBlogComponentPartial")
 
-        @await Component.InvokeAsync("_AddCommentComponentPartial");
+        @await Component.InvokeAsync("_AddCommentComponentPartial")
              
     </div>
 
