--- a/Frontends/CarBook_WebUI/Views/AdminCar/Index.cshtml
+++ b/Frontends/CarBook_WebUI/Views/AdminCar/Index.cshtml
@@ -1,8 +1,63 @@
-﻿
+﻿@model List<ResultCarWithBrandsDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
+    int count = 0;
 }
 
-<h1>Car List</h1>
+<div class="page-content">
+    <div class="container-fluid">
+
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Araba Listesi</h4>
+                        
+                        <div class="table-responsive">
+                            <table class="table mb-0">
+                                <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th>Marka</th>
+                                        <th>Model</th>
+                                        <th>Vites Türü</th>
+                                        <th>Km</th>
+                                        <th>Sil</th>
+                                        <th>Güncelle</th>
+                                        <th>Detaylar</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
+                                        count++;
+                                        <tr>
+                                            <th scope="row">@count</th>
+                                            <td>@item.BrandName</td>
+                                            <td>@item.Model</td>
+                                            <td>@item.Transmission</td>
+                                            <td>@item.Km</td>
+                                            <td><a href="/AdminCar/RemoveCar/@item.CarID" class="btn btn-outline-danger">Sil</a></td>
+                                            <td><a href="/AdminCar/UpdateCar/@item.CarID" class="btn btn-outline-success">Güncelle</a></td>
+                                            <td><a href="/CarList/CarDetail/@item.CarID" class="btn btn-outline-dark">Detaylar</a></td>
+                                        </tr>
+                                    }
+
+                                </tbody>
+                            </table>
+                            <td><a href="/AdminCar/CreateCar/" class="btn btn-outline-primary">Yeni Araç Girişi</a></td>
+                        </div>
+
+                    </div>
+                    <!-- end card-body-->
+                </div>
+                <!-- end card -->
+
+            </div>
+
+        </div>
+
+    </div> 
+</div>
 
