--- a/Frontends/CarBook_WebUI/Views/AdminLayout/AdminNavbarPartial.cshtml
+++ b/Frontends/CarBook_WebUI/Views/AdminLayout/AdminNavbarPartial.cshtml
@@ -64,7 +64,7 @@
             <div class="dropdown d-inline-block">
                 <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img class="" src="assets/images/flags/us.jpg" alt="Header Language" height="16">
+                    <img class="" src="~/Admin/vertical/assets/images/flags/us.jpg" alt="Header Language" height="16">
                     <span class="d-none d-sm-inline-block ml-1">İngilizce</span>
                     <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
                 </button>
@@ -92,13 +92,13 @@
 
                     <!-- item-->
                     <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        <img src="~/Admin/vertical/assets/images/flags/turkey.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">Türkçe</span>
+                        <img src="~/Admin/vertical/assets/images/flags/turkey.png" alt="user-image" class="mr-1" height="12"> <span class="align-middle">Türkçe</span>
                     </a>
                 </div>
             </div>
 
             <div class="dropdown d-inline-block">
-                <button type="button" class="btn header-item noti-icon waves-effect" id="page-header-notifications-dropdown"
+                <button type="button" class="btn header-item noti-icon " id="page-header-notifications-dropdown"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="mdi mdi-bell"></i>
                     <span class="badge badge-danger badge-pill">0</span>
