--- a/Frontends/CarBook_WebUI/Views/AdminLayout/Index.cshtml
+++ b/Frontends/CarBook_WebUI/Views/AdminLayout/Index.cshtml
@@ -9,7 +9,6 @@
 
     @await Html.PartialAsync("/Views/AdminLayout/AdminHeaderPartial.cshtml")
 
-
 <body>
 
     <!-- Begin page -->
@@ -17,209 +16,22 @@
 
         @await Html.PartialAsync("/Views/AdminLayout/AdminNavbarPartial.cshtml")
         
-        <!-- ========== Left Sidebar Start ========== -->
-        <div class="vertical-menu">
 
-            <div data-simplebar class="h-100">
-
-                <div class="navbar-brand-box">
-                    <a href="index.html" class="logo">
-                        <i class="mdi mdi-alpha-x-circle"></i>
-                        <span>
-                            Xacton
-                        </span>
-                    </a>
-                </div>
-
-                <!--- Sidemenu -->
-                <div id="sidebar-menu">
-                    <!-- Left Menu Start -->
-                    <ul class="metismenu list-unstyled" id="side-menu">
-                        <li class="menu-title">Menu</li>
-
-                        <li>
-                            <a href="index.html" class="waves-effect"><i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Dashboard</span></a>
-                        </li>
-
-                        <li>
-                            <a href="javascript: void(0);" class="has-arrow waves-effect"><i class="feather-copy"></i><span>Pages</span></a>
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li><a href="pages-invoice.html">Invoice</a></li>
-                                <li><a href="pages-starter.html">Starter Page</a></li>
-                                <li><a href="pages-maintenance.html">Maintenance</a></li>
-                                <li><a href="pages-faqs.html">FAQs</a></li>
-                                <li><a href="pages-pricing.html">Pricing</a></li>
-                                <li><a href="pages-login.html">Login</a></li>
-                                <li><a href="pages-register.html">Register</a></li>
-                                <li><a href="pages-recoverpw.html">Recover Password</a></li>
-                                <li><a href="pages-lock-screen.html">Lock Screen</a></li>
-                                <li><a href="pages-404.html">Error 404</a></li>
-                                <li><a href="pages-500.html">Error 500</a></li>
-                            </ul>
-                        </li>
-
-                        <li><a href="calendar.html" class=" waves-effect"><i class="feather-calendar"></i><span>Calendar</span></a></li>
-
-                        <li class="menu-title">Components</li>
-
-                        <li>
-                            <a href="javascript: void(0);" class="has-arrow waves-effect"><i class="feather-briefcase"></i><span>UI Elements</span></a>
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li><a href="ui-buttons.html">Buttons</a></li>
-                                <li><a href="ui-cards.html">Cards</a></li>
-                                <li><a href="ui-carousel.html">Carousel</a>
-                                <li><a href="ui-embeds.html">Embeds</a>
-                                <li><a href="ui-general.html">General</a></li>
-                                <li><a href="ui-grid.html">Grid</a></li>
-                                <li><a href="ui-media-objects.html">Media Objects</a></li>
-                                <li><a href="ui-modals.html">Modals</a></li>
-                                <li><a href="ui-progressbars.html">Progress Bars</a></li>
-                                <li><a href="ui-tabs.html">Tabs</a></li>
-                                <li><a href="ui-typography.html">Typography</a></li>
-                                <li><a href="ui-toasts.html">Toasts</a></li>
-                                <li><a href="ui-tooltips-popovers.html">Tooltips & Popovers</a></li>
-                                <li><a href="ui-scrollspy.html">Scrollspy</a></li>
-                                <li><a href="ui-spinners.html">Spinners</a></li>
-                                <li><a href="ui-sweetalerts.html">Sweet Alerts</a></li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <a href="javascript: void(0);" class="has-arrow waves-effect"><i class="feather-list"></i><span>Tables</span></a>
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li><a href="tables-basic.html">Basic Tables</a></li>
-                                <li><a href="tables-datatables.html">Data Tables</a></li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <a href="javascript: void(0);" class="has-arrow waves-effect"><i class="feather-bar-chart-2"></i><span>Charts</span></a>
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li><a href="charts-morris.html">Morris</a></li>
-                                <li><a href="charts-google.html">Google</a></li>
-                                <li><a href="charts-chartjs.html">Chartjs</a></li>
-                                <li><a href="charts-sparkline.html">Sparkline</a></li>
-                                <li><a href="charts-knob.html">Jquery Knob</a></li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <a href="javascript: void(0);" class="waves-effect"><i class="feather-book"></i><span class="badge badge-pill badge-danger float-right">6</span><span>Forms</span></a>
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li><a href="forms-elements.html">Elements</a></li>
-                                <li><a href="forms-plugins.html">Plugins</a></li>
-                                <li><a href="forms-validation.html">Validation</a></li>
-                                <li><a href="forms-mask.html">Masks</a></li>
-                                <li><a href="forms-quilljs.html">Quilljs</a></li>
-                                <li><a href="forms-uploads.html">File Uploads</a></li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <a href="javascript: void(0);" class="has-arrow waves-effect"><i class="feather-box"></i><span>Icons</span></a>
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li><a href="icons-materialdesign.html">Material Design</a></li>
-                                <li><a href="icons-fontawesome.html">Font awesome</a></li>
-                                <li><a href="icons-dripicons.html">Dripicons</a></li>
-                                <li><a href="icons-feather.html">Feather Icons</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="menu-title">More</li>
-
-                        <li>
-                            <a href="javascript: void(0);" class="has-arrow waves-effect"><i class="feather-map"></i><span>Maps</span></a>
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li><a href="maps-google.html">Google Maps</a></li>
-                                <li><a href="maps-vector.html">Vector Maps</a></li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <a href="javascript: void(0);" class="has-arrow waves-effect"><i class="mdi mdi-share-variant"></i><span>Multi Level</span></a>
-                            <ul class="sub-menu" aria-expanded="true">
-                                <li><a href="javascript: void(0);">Level 1.1</a></li>
-                                <li>
-                                    <a href="javascript: void(0);" class="has-arrow">Level 1.2</a>
-                                    <ul class="sub-menu" aria-expanded="true">
-                                        <li><a href="javascript: void(0);">Level 2.1</a></li>
-                                        <li><a href="javascript: void(0);">Level 2.2</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-
-                    </ul>
-                </div>
-                <!-- Sidebar -->
-            </div>
-        </div>
-        <!-- Left Sidebar End -->
-        <!-- ============================================================== -->
-        <!-- Start right Content here -->
-        <!-- ============================================================== -->
+        @await Html.PartialAsync("/Views/AdminLayout/AdminSidebarPartial.cshtml")
+        
+       
         <div class="main-content">
-
-            <div class="page-content">
-                <div class="container-fluid">
-
-                    <!-- start page title -->
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="page-title-box d-flex align-items-center justify-content-between">
-                                <h4 class="mb-0 font-size-18">Starter</h4>
-
-                                <div class="page-title-right">
-                                    <ol class="breadcrumb m-0">
-                                        <li class="breadcrumb-item"><a href="javascript: void(0);">Pages</a></li>
-                                        <li class="breadcrumb-item active">Starter</li>
-                                    </ol>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    <!-- end page title -->
-
-                </div> <!-- container-fluid -->
-            </div>
-            <!-- End Page-content -->
-
-            <footer class="footer">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            2019 © Xacton.
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="text-sm-right d-none d-sm-block">
-                                Design & Develop by Myra
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </footer>
+            @RenderBody()
+            @await Html.PartialAsync("/Views/AdminLayout/AdminFooterPartial.cshtml")
+            
 
         </div>
-        <!-- end main content-->
+
 
     </div>
-    <!-- END layout-wrapper -->
-    <!-- Overlay-->
-    <div class="menu-overlay"></div>
-
-
-    <!-- jQuery  -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/metismenu.min.js"></script>
-    <script src="assets/js/waves.js"></script>
-    <script src="assets/js/simplebar.min.js"></script>
-
-    <!-- App js -->
-    <script src="assets/js/theme.js"></script>
-
+ 
+    @await Html.PartialAsync("/Views/AdminLayout/AdminScriptPartial.cshtml")
+   
 </body>
 
 </html>
-@RenderBody()
