--- a/Frontends/CarBook_WebUI/Views/AdminCar/CreateCar.cshtml
+++ b/Frontends/CarBook_WebUI/Views/AdminCar/CreateCar.cshtml
@@ -60,13 +60,13 @@
                             <button type="submit" class="btn btn-primary waves-effect waves-light">Aracı Kaydet</button>
                         </form>
 
-                    </div> <!-- end card-body-->
-                </div> <!-- end card-->
+                    </div> 
+                </div> 
 
             </div>
-            <!-- end card-body-->
+        
         </div>
-        <!-- end card -->
+      
 
     </div>
 
