--- a/Frontends/CarBook_WebUI/Views/AdminCar/Index.cshtml
+++ b/Frontends/CarBook_WebUI/Views/AdminCar/Index.cshtml
@@ -26,6 +26,8 @@
                                         <th>Sil</th>
                                         <th>Güncelle</th>
                                         <th>Detaylar</th>
+                                        <th>Sitede Gör</th>
+                                        <th>Fiyat Bilgileri</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -41,6 +43,8 @@
                                             <td><a href="/AdminCar/RemoveCar/@item.CarID" class="btn btn-outline-danger">Sil</a></td>
                                             <td><a href="/AdminCar/UpdateCar/@item.CarID" class="btn btn-outline-success">Güncelle</a></td>
                                             <td><a href="/CarList/CarDetail/@item.CarID" class="btn btn-outline-dark">Detaylar</a></td>
+                                            <td><a href="/CarList/CarDetail/@item.CarID" class="btn btn-outline-warning">Siteye Git</a></td>
+                                            <td><a href="/CarList/CarDetail/@item.CarID" class="btn btn-outline-secondary">Fiyat Bilgileri</a></td>
                                         </tr>
                                     }
 
