--- a/Frontends/CarBook_WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook_WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -13,6 +13,7 @@
 @using CarBook_Dto.AuthorDtos
 @using CarBook_Dto.FeatureDtos
 @using CarBook_Dto.BrandDtos
+@using CarBook_Dto.CommentDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
