--- a/Frontends/CarBook_WebUI/Views/AdminLayout/AdminSidebarPartial.cshtml
+++ b/Frontends/CarBook_WebUI/Views/AdminLayout/AdminSidebarPartial.cshtml
@@ -23,11 +23,11 @@
                 <li><a href="/AdminCar/Index/" class="waves-effect"><i class="fas fa-car"></i><span>Araba İşlemleri</span></a></li>
                 <li><a href="/AdminFeature/Index/" class="waves-effect"><i class="fas fa-bus"></i><span>Araba Özellikleri</span></a></li>
                 <li><a href="/AdminBrand/Index/" class="waves-effect"><i class="fas fa-business-time"></i><span>Markalar</span></a></li>
-                <li><a href="#" class="waves-effect"><i class="fas fa-broom"></i><span>Banner Alanı</span></a></li>
-                <li><a href="#" class="waves-effect"><i class="fas fa-info"></i><span>Hakkımızda</span></a></li>
-                <li><a href="#" class="waves-effect"><i class="fas fa-pencil-alt"></i><span>Yazar İşlemleri</span></a></li>
-                <li><a href="#" class="waves-effect"><i class="fas fa-certificate"></i><span>Blog Kategorileri</span></a></li>
-                <li><a href="#" class="waves-effect"><i class="fas fa-blog"></i><span>Blog İşlemleri</span></a></li>
+                <li><a href="/Admin/AdminBanner/Index/" class="waves-effect"><i class="fas fa-broom"></i><span>Banner Alanı</span></a></li>
+                <li><a href="/Admin/AdminAbout/Index/" class="waves-effect"><i class="fas fa-info"></i><span>Hakkımızda</span></a></li>
+                <li><a href="/Admin/AdminAuthor/Index/" class="waves-effect"><i class="fas fa-pencil-alt"></i><span>Yazar İşlemleri</span></a></li>
+                <li><a href="/Admin/AdminCategory/Index/" class="waves-effect"><i class="fas fa-certificate"></i><span>Blog Kategorileri</span></a></li>
+                <li><a href="/Admin/AdminBlog/Index/" class="waves-effect"><i class="fas fa-blog"></i><span>Blog İşlemleri</span></a></li>
                 <li><a href="#" class="waves-effect"><i class="fas fa-money-bill-alt"></i><span>Ödeme Türleri</span></a></li>
                 <li><a href="#" class="waves-effect"><i class="fas fa-comment-alt"></i><span>Yorumlar</span></a></li>
                 <li><a href="#" class="waves-effect"><i class="fas fa-phone"></i><span>İletişim</span></a></li>
