listing prices creating pivot table

--- a/Frontends/CarBook_WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook_WebUI/Views/_ViewImports.cshtml
@@ -13,6 +13,9 @@
 @using CarBook_Dto.AuthorDtos
 @using CarBook_Dto.FeatureDtos
 @using CarBook_Dto.BrandDtos
+@using CarBook_Dto.LocationDtos
+@using CarBook_Dto.RentACarDtos
+@using CarBook_Dto.ReservationDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
