--- a/Frontends/CarBook_WebUI/Areas/Admin/Views/AdminStatistics/Index.cshtml
+++ b/Frontends/CarBook_WebUI/Areas/Admin/Views/AdminStatistics/Index.cshtml
@@ -151,12 +151,12 @@
                                 </h2>
                             </div>
                             <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.avgRentPriceForDailyRandom% <i class="mdi mdi-arrow-down"></i></span>
+                                <span class="text-white-50">@ViewBag.avgRentPriceForDailyRandom % <i class="mdi mdi-arrow-down"></i></span>
                             </div>
                         </div>
 
                         <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.avgRentPriceForDailyRandom%;"></div>
+                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.avgRentPriceForDailyRandom %;"></div>
                         </div>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                 </div>
-            </div> <!-- end col dönülecek -->
+            </div> <!-- end col -->
 
             <div class="col-md-6 col-xl-3">
                 <div class="card bg-warning border-warning">
