--- a/Frontends/CarBook_WebUI/Views/Shared/Components/_DefaultLast5CarsWithBrandsComponentPartial/Default.cshtml
+++ b/Frontends/CarBook_WebUI/Views/Shared/Components/_DefaultLast5CarsWithBrandsComponentPartial/Default.cshtml
@@ -5,8 +5,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 heading-section text-center ftco-animate mb-5">
-                <span class="subheading">What we offer</span>
-                <h2 class="mb-2">Feeatured Vehicles</h2>
+                <span class="subheading">Sizin İçin Önerilerimiz</span>
+                <h2 class="mb-2">Öne Çıkan Araçlar</h2>
             </div>
         </div>
         <div class="row">
