--- a/Frontends/CarBook_WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook_WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -18,6 +18,7 @@
 @using CarBook_Dto.LocationDtos
 @using CarBook_Dto.SocialMediaDtos
 @using CarBook_Dto.StatisticsDtos
+@using CarBook_Dto.CarFeatureDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
