--- a/Frontends/CarBook_WebUI/Views/AdminCar/Index.cshtml
+++ b/Frontends/CarBook_WebUI/Views/AdminCar/Index.cshtml
@@ -42,7 +42,7 @@
                                             <td>@item.Km</td>
                                             <td><a href="/AdminCar/RemoveCar/@item.CarID" class="btn btn-outline-danger">Sil</a></td>
                                             <td><a href="/AdminCar/UpdateCar/@item.CarID" class="btn btn-outline-success">Güncelle</a></td>
-                                            <td><a href="/CarList/CarDetail/@item.CarID" class="btn btn-outline-dark">Detaylar</a></td>
+                                            <td><a href="/Admin/AdminCarFeatureDetail/Index/@item.CarID" class="btn btn-outline-dark">Detaylar</a></td>
                                             <td><a href="/CarList/CarDetail/@item.CarID" class="btn btn-outline-warning">Siteye Git</a></td>
                                             <td><a href="/CarList/CarDetail/@item.CarID" class="btn btn-outline-secondary">Fiyat Bilgileri</a></td>
                                         </tr>
