--- a/Frontends/CarBook_WebUI/Views/Default/Index.cshtml
+++ b/Frontends/CarBook_WebUI/Views/Default/Index.cshtml
@@ -3,7 +3,11 @@
     ViewData["Title"] = "Index";
     Layout = null;
 }
-
+<style>
+    #drop option {
+        color: black;
+    }
+</style>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,26 +29,26 @@
                                 <h2>Şimdi Aracınızı Kiralayın</h2>
                                 <div class="form-group">
                                     <label for="" class="label">Alınacak Lokasyon</label>
-                                    @Html.DropDownListFor(x=>x.LocationID,(List<SelectListItem>) ViewBag.v,new{@class="from-control" , name="locationId"})
+                                    @Html.DropDownListFor(x=>x.LocationID,(List<SelectListItem>) ViewBag.v,new{@class="from-control" ,@id="drop"})
                                 </div>
 
                                 <div class="d-flex">
                                     <div class="form-group mr-2">
                                         <label for="" class="label">Alış Tarihi</label>
-                                        <input type="text" class="form-control" name="book_pick_date" id="book_pick_date" placeholder="Date">
+                                        <input type="text" class="form-control" name="book_pick_date" id="book_pick_date" placeholder="Tarih Seçiniz">
                                     </div>
                                     <div class="form-group ml-2">
                                         <label for="" class="label">İade Tarihi</label>
-                                        <input type="text" class="form-control" name="book_off_date" id="book_off_date" placeholder="Date">
+                                        <input type="text" class="form-control" name="book_off_date" id="book_off_date" placeholder="Tarih Seçiniz">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="" class="label">Alış Saati</label>
-                                    <input type="text" class="form-control" name="time_pick" id="time_pick" placeholder="Time">
+                                    <input type="text" class="form-control" name="time_pick" id="time_pick" placeholder="Saat Seçiniz">
                                 </div>
                                 <div class="form-group">
                                     <label for="" class="label">İade Saati</label>
-                                    <input type="text" class="form-control" name="time_off" id="time_pick" placeholder="Time">
+                                    <input type="text" class="form-control" name="time_off" id="time_pick" placeholder="Saat Seçiniz">
                                 </div>
                                 <div class="form-group">
                                     <button class="btn btn-secondary py-3 px-4">Uygun Araçları Listele</button>
@@ -80,7 +84,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <p><a href="#" class="btn btn-primary py-3 px-4">Sizin için en mükemmel arabayı rezerve edin.</a></p>
+                                <p><a href="/CarPricing/Index/" class="btn btn-primary py-3 px-4">Araç Fiyat Listemizi Görün</a></p>
                             </div>
                         </div>
                     </div>
@@ -102,7 +106,7 @@
     @await Component.InvokeAsync("_GetLast3BlogsWithAuthorsListComponentPartial");
     
     @await Component.InvokeAsync("_DefaultStatisticsComponentPartial");
-
+ 
     @await Component.InvokeAsync("_FooterUILayoutComponentPartial")
 
     @await Component.InvokeAsync("_ScriptUILayoutComponentPartial")
