--- a/Frontends/CarBook_WebUI/Views/Shared/Components/_DefaultStatisticsComponentPartial/Default.cshtml
+++ b/Frontends/CarBook_WebUI/Views/Shared/Components/_DefaultStatisticsComponentPartial/Default.cshtml
@@ -6,32 +6,32 @@
             <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
                 <div class="block-18">
                     <div class="text text-border d-flex align-items-center">
-                        <strong class="number" data-number="60">0</strong>
-                        <span>Year <br>Experienced</span>
+                        <strong class="number" data-number="@ViewBag.carCount">0</strong>
+                        <span>Toplam Araç Sayısı </span>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
                 <div class="block-18">
                     <div class="text text-border d-flex align-items-center">
-                        <strong class="number" data-number="1090">0</strong>
-                        <span>Total <br>Cars</span>
+                        <strong class="number" data-number="@ViewBag.locationCount">0</strong>
+                        <span>Lokasyon Sayısı </span>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
                 <div class="block-18">
                     <div class="text text-border d-flex align-items-center">
-                        <strong class="number" data-number="2590">0</strong>
-                        <span>Happy <br>Customers</span>
+                        <strong class="number" data-number="@ViewBag.brandCount">0</strong>
+                        <span>Marka Sayısı</span>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
                 <div class="block-18">
                     <div class="text d-flex align-items-center">
-                        <strong class="number" data-number="67">0</strong>
-                        <span>Total <br>Branches</span>
+                        <strong class="number" data-number="@ViewBag.carCountByFuelElectric">0</strong>
+                        <span>Elektirikli Araç Sayısı</span>
                     </div>
                 </div>
             </div>
