--- a/Frontends/CarBook_WebUI/Views/Shared/Components/_GetLast3BlogsWithAuthorsListComponentPartial/Default.cshtml
+++ b/Frontends/CarBook_WebUI/Views/Shared/Components/_GetLast3BlogsWithAuthorsListComponentPartial/Default.cshtml
@@ -13,16 +13,16 @@
             {
                 <div class="col-md-4 d-flex ftco-animate">
                     <div class="blog-entry justify-content-end">
-                        <a href="blog-single.html" class="block-20" style="background-image: url('@item.CoverImgUrl');">
+                        <a href="/Blog/BlogDetails/@item.BlogID" class="block-20" style="background-image: url('@item.CoverImgUrl');">
                         </a>
                         <div class="text pt-4">
                             <div class="meta mb-3">
                                 <div><a href="#">@item.CreateDate</a></div>
                                 <div><a href="#">@item.AuthorName</a></div>
-                                <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 0</a></div>
+                               
                             </div>
                             <h3 class="heading mt-2"><a href="#">@item.Title</a></h3>
-                            <p><a href="#" class="btn btn-primary">Devamını Oku</a></p>
+                            <p><a href="/Blog/BlogDetails/@item.BlogID" class="btn btn-primary">Devamını Oku</a></p>
                         </div>
                     </div>
                 </div>
