--- a/Frontends/CarBook_WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook_WebUI/Views/_ViewImports.cshtml
@@ -16,6 +16,7 @@
 @using CarBook_Dto.LocationDtos
 @using CarBook_Dto.RentACarDtos
 @using CarBook_Dto.ReservationDtos
+@using CarBook_Dto.CommentDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
